row gap fix

--- a/src/styles/_standard-06-grid.scss
+++ b/src/styles/_standard-06-grid.scss
@@ -57,6 +57,7 @@
 }
 .grid > * {
     min-width: 0; /* ← Force items to shrink below content size */
+    margin-block-end: 0;
 }
 @media (max-width: #{$mobile}) {
     .grid, [class^='grid-'] {
